samples/_failures_safe/1761462897_5e61e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_664f3872.c: In function ‘main’:
./samples/SAFE/__tmp_664f3872.c:152:5: error: expected declaration or statement at end of input
  152 |     if (analyzer.word_count == 0) {
      |     ^~
./samples/SAFE/__tmp_664f3872.c:152:5: error: expected declaration or statement at end of input
